img size and margin decrease

--- a/load_balancer/static/notebooks.css
+++ b/load_balancer/static/notebooks.css
@@ -253,7 +253,9 @@ div.trail-wrapper.hidden-print > div.container > div.row{
 	padding-right: 16px;
 	}
 
-
+.project-text > div> img {
+	max-width: 80%;
+}
 
 .container {
 	background-color: #fff;
