--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -20,7 +20,7 @@
         <h3>
             <span id="typed"></span>
         </h3>
-        <a href="{{gesishub_url}}" class="btn btn-lg btn-warning orc-button" role="button">Login</a>
+        <a href="{{gesishub_url}}" class="btn btn-lg btn-warning orc-button" role="button">Try it now >></a>
     </div>
 </div>
 
@@ -28,7 +28,7 @@
 <div class="row form-group"></div>
 <div class="row form-group"></div>
 
-<div class="row text-center display-flex" style="margin: 48px 0px 32px 0px;">
+<div class="row text-center display-flex" style="margin: 54px 0px 0px 0px;">
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
     <div class="use-examples">
       <img src="/static/images/mybinder_vector_logo.svg?v=1" alt="MyBinder Logo">
