add new featured projects and apply new templates and style

--- a/load_balancer/static/notebooks.css
+++ b/load_balancer/static/notebooks.css
@@ -22,7 +22,7 @@
 		margin-right: 15px;
 	}
 
-{# navbar buttons disappearing fix #}
+/* navbar buttons disappearing fix */
 	.navbar-toggle {
 		position: relative;
 		float: right;
