--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -19,12 +19,13 @@
 {% block main %}
 <div class="container">
   {% block binder_header %}
-  <div id="header" class="text-center">
-  {#      <h3>Turn a Git repo into a collection of interactive notebooks</h3>#}
-    <div id="explanation">
-      Have a Binder-Ready repository? With GESIS Notebooks, turn this repository into a persistent Jupyter environment, allowing you to continue your analysis from anywhere at any time.
+    <div id="header" class="text-center">
+        {#      <h3>Turn a Git repo into a collection of interactive notebooks</h3>#}
+        <div id="explanation">
+            Have a Binder-Ready repository? With GESIS Notebooks, turn this repository into a persistent Jupyter
+            environment, allowing you to continue your analysis from anywhere at any time.
+        </div>
     </div>
-  </div>
   {% endblock binder_header %}
   <div id="projects-container">
     <h4>Your Projects</h4>
@@ -256,65 +257,97 @@
 
   <div class="row form-group"></div>
   <div class="row form-group"></div>
+  <div class="row form-group"></div>
 
   {% block how_it_works %}
-  <div class="row text-center display-flex">
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-      <div class="use-examples">
-        <img src="/static/images/mybinder_vector_logo.svg?v=1" alt="MyBinder Logo">
-        <div class="caption">
-          <h3>Import</h3>
-          <p>Enter your repository information and we build and launch your <a href="https://mybinder.readthedocs.io/en/latest/introduction.html">binder-ready</a> repository like <a href="https://mybinder.org">MyBinder.org</a>.</p>
+    <div class="row text-center display-flex" style="margin: 54px 0px 0px 0px;">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="use-examples">
+                <img src="/static/images/mybinder_vector_logo.svg?v=1" alt="MyBinder Logo">
+                <div class="caption">
+                    <h3>Import</h3>
+                    <p>
+                        Enter your repository information and we build and launch your
+                        <a href="https://mybinder.readthedocs.io/en/latest/introduction.html">binder-ready</a>
+                        repository like <a href="https://mybinder.org">MyBinder.org</a>.
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-      <div class="use-examples">
-        <img src="/static/images/powered_by_jupyter_logo.svg?v=1" alt="Jupyter Logo">
-        <div class="caption">
-          <h3>Persistent Environment</h3>
-          <p>Once a repository has been built it will be added to the list of your projects saving your work in a persistent <a href="https://jupyter.org">Jupyter</a> environment.</p>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="use-examples">
+                <img src="/static/images/powered_by_jupyter_logo.svg?v=1" alt="Jupyter Logo">
+                <div class="caption">
+                    <h3>Persistent Environment</h3>
+                    <p>
+                        Once a repository has been built it will be added to your list of projects saving your work in a
+                        persistent <a href="https://jupyter.org">Jupyter</a> environment.
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-      <div class="use-examples">
-        <img src="/static/images/open_science_logo.png?v=1" alt="Open Science Logo">
-        <div class="caption">
-          <h3>Open Science</h3>
-          <p>This <a href="https://www.go-fair.org">FAIR</a> open access service supports open methodology with reproducible and transparent documentation of data analysis.</p>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="use-examples">
+                <img src="/static/images/open_science_logo.png?v=1" alt="Open Science Logo">
+                <div class="caption">
+                    <h3>Open Science</h3>
+                    <p>
+                        This <a href="https://www.go-fair.org">FAIR</a> open access service supports open methodology
+                        with reproducible and transparent documentation of data analysis.
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
   {% endblock how_it_works %}
 
 
-{#<div class="row form-group page-header">#}
-<div class="row form-group">
-    <div class="col-lg-12">
-{#    <div class="col-lg-10 col-lg-offset-1">#}
-          <h2>Featured Projects</h2>
+    <div class="row form-group"></div>
+    {#<div class="row form-group page-header">#}
+    <div class="row form-group featured-projects">
+        <div class="col-lg-12">
+            {#    <div class="col-lg-10 col-lg-offset-1">#}
+            <h2>Featured Projects</h2>
+        </div>
     </div>
-</div>
 
-<div class="row form-group text-center display-flex">
-  {% for example in binder_examples %}
-  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-    <div class="thumbnail">
-{#      <img src="..." alt="...">#}
-      <div class="caption">
-        <h3>{{ example.headline }}</h3>
-        {% if example.content %}
-        <p>{{ example.content }}</p>
-        {% endif %}
-        <div><a href="{{ example.binder_link }}" class="btn btn-warning orc-button" role="button">Launch Binder</a>
-           <a href="{{ example.repo_link }}" class="btn btn-info orc-button-info" role="button">Visit Repo</a></div>
-      </div>
+    <div class="row form-group text-left display-flex featured-projects">
+        {% for example in binder_examples %}
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-example">
+            <div class="thumbnail">
+                <div class="caption project-caption">
+                    <h4 style="margin:0; font-size: 16px;"><a href="{{ example.repo_link }}"><b>{{ example.headline }}</b></a>
+                        <br>
+                        {% if example.who %}
+                        <b>By:</b> <i>{{ example.who|safe }}</i>
+                        {% endif %}
+                        <br>
+                        {% if example.where %}
+                        <small>{{ example.where|safe }}</small>
+                        {% endif %}
+                    </h4>
+                    <p>{{ example.description|safe }}</p>
+                    <div style="display: inline-block; vertical-align: middle;">
+                        <div style="display: inline-block;">
+                            {% if example.where %}
+                            <b style="font-size: 13px;">Language:</b> {{ example.language }}
+                            {% endif %}
+                        </div>
+                        <div style="display: inline-block; float: right;">
+                            <a href="{{ example.binder_link }}" style="align:right;">
+                                <img src="/static/images/badge_logo.svg?v=1" alt="Launch Binder">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-  </div>
-  {% endfor %}
-</div>
+    <div class="row form-group" style="padding: 0px 32px 0px 32px;">
+        <a href="/gallery/" target="_blank" style="float:right;">See all Projects ></a>
+    </div>
+    <div class="row form-group"></div>
 </div>
 {% endblock %}
 
