update text to gallery

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -344,7 +344,7 @@
         {% endfor %}
     </div>
     <div class="row form-group" style="padding: 0px 32px 0px 32px;">
-        <a href="/gallery/" target="_blank" style="float:right;">See all Projects ></a>
+        <a href="/gallery/" target="_blank" style="float:right;">See all projects >></a>
     </div>
     <div class="row form-group"></div>
 </div>
