--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -111,7 +111,7 @@
         {% endfor %}
     </div>
     <div class="row form-group" style="padding: 0px 32px 0px 32px;">
-        <a href="/gallery/" target="_blank" style="float:right;">See all Projects ></a>
+        <a href="/gallery/" target="_blank" style="float:right;">See all projects >></a>
     </div>
     <div class="row form-group"></div>
 {% endblock main %}
