--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -61,7 +61,7 @@
                     <h3>Open Science</h3>
                     <p>
                         This <a href="https://www.go-fair.org">FAIR</a> open access service supports open methodology
-                        with reproducible and transparent documentation of data analysis.
+                        with reproducible and transparent documentation for data analysis.
                     </p>
                 </div>
             </div>
@@ -73,7 +73,7 @@
     <div class="row form-group featured-projects">
         <div class="col-lg-12">
             {#    <div class="col-lg-10 col-lg-offset-1">#}
-            <h2>Featured Projects</h2>
+            <h3>Featured Projects</h3>
         </div>
     </div>
 
