--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -252,7 +252,10 @@
   <div class="row form-group"></div>
 
   <div class="row text-center">
-    <div id="questions">questions?<br />read <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a> and join the discussion</div>
+    <div id="questions">questions?<br />read
+        <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a>,
+        join the discussion and see the <a href="https://github.com/gesiscss/orc">code</a>
+    </div>
   </div>
 
   <div class="row form-group"></div>
