team page new member

--- a/orc_site/templates/team.html
+++ b/orc_site/templates/team.html
@@ -52,12 +52,32 @@
         <div class="col-md-4 col-sm-4">
             <div class="our-team">
                 <div class="pic">
-                    <img src="/static/images/team3.jpg" class="img-responsive">
+                    <img src="/static/images/team4.png" class="img-responsive">
                 </div>
                 <div class="team-content">
-                    <h3 class="title">Dhurim Sylejmani</h3>
+                    <h3 class="title">Petar Dinev</h3>
                     <p class="description">
                         Assistant Developer
+{#
+
+#}
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <h3 class="title">Past Members</h3>
+    <div class="row align-items-start">
+        <div class="col-md-4 col-sm-4">
+          <div class="our-team">
+              <div class="pic">
+                  <img src="/static/images/team3.jpg" class="img-responsive">
+              </div>
+              <div class="team-content">
+                  <h3 class="title">Dhurim Sylejmani</h3>
+                  <p class="description">
+                      Assistant Developer
 {#
 Dhurim Sylejmani is a MSc student at the Web Science program at the University of#}
 {#                        Koblenz-Landau (Germany) and a student research assistant at GESIS - Leibniz-Institute for the#}
@@ -65,13 +85,9 @@ Dhurim Sylejmani is a MSc student at the Web Science program at the University o
 {#                        Gallery</a>.#}
 {#                        He is constantly exploring new concepts, applications and technologies that can add to his#}
 {#                        knowledge.#}
-                    </p>
-                </div>
-            </div>
+                  </p>
+              </div>
+          </div>
         </div>
-
-    </div>
+      </div>
 </div>
-
-
-
