updates for faq

--- a/orc_site/templates/questions.html
+++ b/orc_site/templates/questions.html
@@ -33,7 +33,9 @@
 
   {% endfor%}
   </div>
+{% endblock main %}
 
+{% block extra_js %}
   <script type="text/javascript">
     $('.panel-collapse').on('show.bs.collapse', function () {
      $(this).siblings('.panel-heading').addClass('active');
@@ -42,6 +44,5 @@
    $('.panel-collapse').on('hide.bs.collapse', function () {
      $(this).siblings('.panel-heading').removeClass('active');
    });
-
   </script>
-{% endblock main %}
+{% endblock extra_js %}
