--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/nav.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/nav.html
@@ -26,6 +26,7 @@
                         {% endif %}
                         <li><a href="{{ gesisbinder_url }}" {% if active == 'binder' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>Binder</a></li>
                         <li><a href="{{ gallery_url }}" {% if active == 'gallery' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>Gallery</a></li>
+                        <li><a href="{{ questions_url }}" {% if active == 'questions' %}id="navbar-active-a" class="gs_active_sub"{% endif %}>FAQ</a></li>
                     </ul>
                 </div>
             </div>
