--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -28,7 +28,7 @@
     </div>
   {% endblock binder_header %}
   <div id="projects-container">
-    <h4>Your Projects</h4>
+    <h3>Your Projects</h3>
     <div class="table-responsive">
      <table id="your-projects" class="table table-striped{% if not projects %} hidden{% endif %}">
          <thead>
@@ -109,10 +109,10 @@
   <div class="row form-group"></div>
   <div class="row form-group no-projects{% if projects %} hidden{% endif %}"></div>
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 build-form-container">
     {% block binder_form %}
     <form id="build-form" class="form jumbotron" style="margin-bottom: 0;">
-        <h4 id="form-header" class='row'>Build and launch a new repository</h4>
+        <h3 id="form-header" class='row'>Build and launch a new repository</h3>
         <input type="hidden" id="provider_prefix" value="gh"/>
         <div class="form-group row">
           <label for="repository">Git repository URL (github.com, gitlab.com or self-host)</label>
@@ -253,8 +253,8 @@
 
   <div class="row text-center">
     <div id="questions">questions?<br />read
-        <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865">this post</a>,
-        join the discussion and see the <a href="https://github.com/gesiscss/orc">code</a>
+        <a href="https://discourse.jupyter.org/t/a-persistent-binderhub-deployment/2865" target='_blank'>this post</a>,
+        join the discussion and see the <a href="https://github.com/gesiscss/orc" target='_blank'>code</a>
     </div>
   </div>
 
@@ -270,8 +270,8 @@
                     <h3>Import</h3>
                     <p>
                         Enter your repository information and we build and launch your
-                        <a href="https://mybinder.readthedocs.io/en/latest/introduction.html">binder-ready</a>
-                        repository like <a href="https://mybinder.org">MyBinder.org</a>.
+                        <a href="https://mybinder.readthedocs.io/en/latest/introduction.html" target='_blank'>binder-ready</a>
+                        repository like <a href="https://mybinder.org" target='_blank'>MyBinder.org</a>.
                     </p>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                     <h3>Persistent Environment</h3>
                     <p>
                         Once a repository has been built it will be added to your list of projects saving your work in a
-                        persistent <a href="https://jupyter.org">Jupyter</a> environment.
+                        persistent <a href="https://jupyter.org" target='_blank'>Jupyter</a> environment.
                     </p>
                 </div>
             </div>
@@ -294,7 +294,7 @@
                 <div class="caption">
                     <h3>Open Science</h3>
                     <p>
-                        This <a href="https://www.go-fair.org">FAIR</a> open access service supports open methodology
+                        This <a href="https://www.go-fair.org" target='_blank'>FAIR</a> open access service supports open methodology
                         with reproducible and transparent documentation for data analysis.
                     </p>
                 </div>
@@ -318,7 +318,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-example">
             <div class="thumbnail">
                 <div class="caption project-caption">
-                    <h4 style="margin:0; font-size: 16px;"><a href="{{ example.repo_link }}"><b>{{ example.headline }}</b></a>
+                    <h4 style="margin:0; font-size: 16px;"><a href="{{ example.repo_link }}" target='_blank'><b>{{ example.headline }}</b></a>
                         <br>
                         {% if example.who %}
                         <b>By:</b> <i>{{ example.who|safe }}</i>
