--- a/orc_site/templates/home.html
+++ b/orc_site/templates/home.html
@@ -36,8 +36,8 @@
                     <h3>Import</h3>
                     <p>
                         Enter your repository information and we build and launch your
-                        <a href="https://mybinder.readthedocs.io/en/latest/introduction.html">binder-ready</a>
-                        repository like <a href="https://mybinder.org">MyBinder.org</a>.
+                        <a href="https://mybinder.readthedocs.io/en/latest/introduction.html" target='_blank'>binder-ready</a>
+                        repository like <a href="https://mybinder.org" target='_blank'>MyBinder.org</a>.
                     </p>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                     <h3>Persistent Environment</h3>
                     <p>
                         Once a repository has been built it will be added to your list of projects saving your work in a
-                        persistent <a href="https://jupyter.org">Jupyter</a> environment.
+                        persistent <a href="https://jupyter.org" target='_blank'>Jupyter</a> environment.
                     </p>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <div class="caption">
                     <h3>Open Science</h3>
                     <p>
-                        This <a href="https://www.go-fair.org">FAIR</a> open access service supports open methodology
+                        This <a href="https://www.go-fair.org" target='_blank'>FAIR</a> open access service supports open methodology
                         with reproducible and transparent documentation for data analysis.
                     </p>
                 </div>
@@ -82,7 +82,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-example">
             <div class="thumbnail">
                 <div class="caption project-caption">
-                    <h4 style="margin:0; font-size: 16px;"><a href="{{ example.repo_link }}"><b>{{ example.headline }}</b></a>
+                    <h4 style="margin:0; font-size: 16px;"><a href="{{ example.repo_link }}" target='_blank'><b>{{ example.headline }}</b></a>
                         <br>
                         {% if example.who %}
                         <b>By:</b> <i>{{ example.who|safe }}</i>
