--- a/orc_site/templates/questions.html
+++ b/orc_site/templates/questions.html
@@ -14,9 +14,9 @@
       {% for questions in section['Section']['Questions'] %}
         {% for question in questions.items() %}
           <div class="panel panel-default questions-panel-default">
-              <div class="panel-heading topic-question">
-                  <h3 class="panel-title">
-                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion{{question[1].get('ID')}}" href="#{{question[1].get('ID')}}"><strong>{{question[1].get('Question')}}</strong></a>
+              <div class="panel-heading topic-question noselect">
+                  <h3 class="panel-title noselect">
+                      <a class="accordion-toggle noselect" data-toggle="collapse" data-parent="#accordion{{question[1].get('ID')}}" href="#{{question[1].get('ID')}}"><strong>{{question[1].get('Question')}}</strong></a>
                   </h3>
               </div>
               <div id="{{question[1].get('ID')}}" class="panel-collapse collapse">
