--- a/gesishub/gesishub/files/etc/binderhub/templates/index.html
+++ b/gesishub/gesishub/files/etc/binderhub/templates/index.html
@@ -38,7 +38,7 @@
     </div>
   {% endblock logo %}
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 build-form-container">
       {% block header %}
       <div id="header" class="text-center">
 {#        <h3>Turn a Git repo into a collection of interactive notebooks</h3>#}
