--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -27,7 +27,7 @@
         </div>
     </div>
   {% endblock binder_header %}
-  <div id="projects-container">
+  <div class="projects-container">
     <h3>Your Projects</h3>
     <div class="table-responsive">
      <table id="your-projects" class="table table-striped{% if not projects %} hidden{% endif %}">
@@ -262,7 +262,7 @@
   <div class="row form-group"></div>
 
   {% block how_it_works %}
-    <div class="row text-center display-flex" style="margin: 54px 0px 0px 0px;">
+    <div class="row text-center display-flex" style="margin: 54px -16px 0px -16px;">
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <div class="use-examples">
                 <img src="/static/images/mybinder_vector_logo.svg?v=1" alt="MyBinder Logo">
@@ -346,7 +346,7 @@
         </div>
         {% endfor %}
     </div>
-    <div class="row form-group" style="padding: 0px 32px 0px 32px;">
+    <div class="row form-group" style="padding: 0px 16px 0px 16px;">
         <a href="/gallery/" style="float:right;">See all projects >></a>
     </div>
     <div class="row form-group"></div>
