--- a/load_balancer/static/notebooks.css
+++ b/load_balancer/static/notebooks.css
@@ -385,10 +385,10 @@ footer {
 }
 
 #header {
-	margin-left: 4%;
+	margin-left: 3%;
 	margin-bottom: 32px;
 	margin-top: 32px;
-	width: 92%;
+	width: 94%;
 	border-bottom: 0;
   padding-top: 12px;
   padding-bottom: 24px;
@@ -405,8 +405,8 @@ footer {
 	margin-top: -30px;
 	padding-bottom: 30px;
 	margin-bottom: -30px;
-	margin-right: -16px;
-	margin-left: -16px;
+	margin-right: -32px;
+	margin-left: -32px;
 }
 
 .caption {
@@ -450,15 +450,15 @@ footer {
 }
 
 .featured-projects {
-	padding-left: 2.4rem;
-	padding-right: 2.4rem;
+	padding-left: 0.8rem;
+	padding-right: 0.8rem;
 	margin-bottom:0px;
 }
 
 .project-example {
-	margin-bottom: 16px;
-	padding-right: 8px;
-	padding-left: 8px;
+	margin-bottom: 10px;
+	padding-right: 6px;
+	padding-left: 6px;
 }
 
 .use-examples > img{
@@ -549,26 +549,7 @@ td.projects-display-name {
                                   supported by Chrome, Opera and Firefox */
 }
 
-/* GesisHub CSS */
-
-.projects-container {
-	padding-left: 17px;
-	padding-right: 17px;
-}
-
-.projects-container > h3 {
-	padding-left: 7px;
-}
-
-.build-form-container {
-	padding: 32px 16px;
-}
-
-#build-form {
-	padding-left: 23px !important;
-	padding-right: 22px !important;
-}
-
-#build-form > h3 {
-	margin-top: 0 !important;
+#main-container {
+	padding-left: 32px;
+	padding-right: 32px;
 }
