--- a/orc_site/templates/about.html
+++ b/orc_site/templates/about.html
@@ -7,7 +7,7 @@
 {% block main %}
 {#<div class="row form-group text-center">#}
 {#<div class="row form-group"></div>#}
-<div class="row-side-margins row" >
+<div class="row-side-margins row about-main-row" >
     {#https://www.gesis.org/en/research/external-funding-projects/overview-external-funding-projects/a-virtual-research-infrastructure-for-large-scale-qualitative-data/#}
     <h2 class="title">About </h2>
     <p class="description">
