--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -17,7 +17,7 @@
 {% set projects = user.spawner.get_state_field('projects') %}
 
 {% block main %}
-<div class="container">
+<div class="container" id="main-container">
   {% block binder_header %}
     <div id="header" class="text-center">
         {#      <h3>Turn a Git repo into a collection of interactive notebooks</h3>#}
@@ -105,7 +105,7 @@
   </div>
 </div>
 
-<div id="main" class="container">
+<div id="main-container" class="container">
   <div class="row form-group"></div>
   <div class="row form-group no-projects{% if projects %} hidden{% endif %}"></div>
   <div class="row">
