better name for template variable which holds the path to shared static files served by nginx

--- a/gesishub/gesishub/files/etc/binderhub/templates/page.html
+++ b/gesishub/gesishub/files/etc/binderhub/templates/page.html
@@ -10,11 +10,11 @@
   <title>{% block title %}GESIS Notebooks ({{version}}){% endblock %}</title>
   {% block head %}
   <link href="{{static_url("dist/styles.css")}}" rel="stylesheet"/>
-  <link href="{{ static_hub }}vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="{{ static_nginx }}vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   {% endblock head %}
-  <script src="{{ static_hub }}vendor/jquery-3.2.1.min.js"></script>
-  <link href="{{ static_hub }}notebooks.css?v={{ static_version }}" rel="stylesheet" />
-  <link id="favicon" rel="shortcut icon" type="image/png" href="{{ static_hub }}images/logo/logo.png?v={{ static_version }}" />
+  <script src="{{ static_nginx }}vendor/jquery-3.2.1.min.js"></script>
+  <link href="{{ static_nginx }}notebooks.css?v={{ static_version }}" rel="stylesheet" />
+  <link id="favicon" rel="shortcut icon" type="image/png" href="{{ static_nginx }}images/logo/logo.png?v={{ static_version }}" />
 
   <!-- Social media previews -->
   {% block meta_social %}
@@ -35,8 +35,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="{{ static_hub }}vendor/html5shiv.min.js"></script>
-      <script src="{{ static_hub }}vendor/respond.min.js"></script>
+      <script src="{{ static_nginx }}vendor/html5shiv.min.js"></script>
+      <script src="{{ static_nginx }}vendor/respond.min.js"></script>
     <![endif]-->
 </head>
 
@@ -82,7 +82,7 @@
 
     {% endblock body %}
 
-    <script src="{{ static_hub }}gesis_nav.js?v={{ static_version }}"></script>
+    <script src="{{ static_nginx }}gesis_nav.js?v={{ static_version }}"></script>
     {% block extra_js %}
     {% endblock extra_js %}
 </body>
