--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -4,8 +4,8 @@
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
-                        <img src="{{ static_hub }}images/gs_home_logo_en.svg?v={{ static_version }}" class="hidden-sm hidden-xs" width="200" height="37">
-                        <img src="{{ static_hub }}images/gs_small_logo_de.svg?v={{ static_version }}" class="visible-sm visible-xs">
+                        <img src="{{ static_nginx }}images/gs_home_logo_en.svg?v={{ static_version }}" class="hidden-sm hidden-xs" width="200" height="37">
+                        <img src="{{ static_nginx }}images/gs_small_logo_de.svg?v={{ static_version }}" class="visible-sm visible-xs">
                     </a>
                     <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
@@ -71,7 +71,7 @@
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
                 <div id="header_banner">
                     <a href="{{ home_url }}">
-                        <img src="{{ static_hub }}images/logo/logo_text_2.png?v={{ static_version }}"
+                        <img src="{{ static_nginx }}images/logo/logo_text_2.png?v={{ static_version }}"
                              class="img-responsive" alt="To GESIS Notebooks Homepage" title="To GESIS Notebooks Homepage">
                     </a>
                 </div>
