--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -267,7 +267,7 @@
     <div class="row text-center display-flex" style="margin: 54px -16px 0px -16px;">
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <div class="use-examples">
-                <img src="{{ static_hub }}images/mybinder_vector_logo.svg?v={{ static_version }}" alt="MyBinder Logo">
+                <img src="{{ static_nginx }}images/mybinder_vector_logo.svg?v={{ static_version }}" alt="MyBinder Logo">
                 <div class="caption">
                     <h3>Import</h3>
                     <p>
@@ -280,7 +280,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <div class="use-examples">
-                <img src="{{ static_hub }}images/powered_by_jupyter_logo.svg?v={{ static_version }}" alt="Jupyter Logo">
+                <img src="{{ static_nginx }}images/powered_by_jupyter_logo.svg?v={{ static_version }}" alt="Jupyter Logo">
                 <div class="caption">
                     <h3>Persistent Environment</h3>
                     <p>
@@ -292,7 +292,7 @@
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <div class="use-examples">
-                <img src="{{ static_hub }}images/open_science_logo.png?v={{ static_version }}" alt="Open Science Logo">
+                <img src="{{ static_nginx }}images/open_science_logo.png?v={{ static_version }}" alt="Open Science Logo">
                 <div class="caption">
                     <h3>Open Science</h3>
                     <p>
@@ -340,7 +340,7 @@
                         </div>
                         <div style="display: inline-block; float: right;">
                             <a href="{{ example.binder_link }}" style="align:right;">
-                                <img src="{{ static_hub }}images/badge_logo.svg?v={{ static_version }}" alt="Launch Binder">
+                                <img src="{{ static_nginx }}images/badge_logo.svg?v={{ static_version }}" alt="Launch Binder">
                             </a>
                         </div>
                     </div>
