--- a/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
@@ -12,8 +12,8 @@
 {% endblock meta_social %}
 
 {% block extra_css %}
-<link href="{{ static_hub }}orc_site.css?v={{ static_version }}" rel="stylesheet" />
-<link href="{{ static_hub }}team.css?v={{ static_version }}" rel="stylesheet" />
+<link href="{{ static_nginx }}orc_site.css?v={{ static_version }}" rel="stylesheet" />
+<link href="{{ static_nginx }}team.css?v={{ static_version }}" rel="stylesheet" />
 {% endblock extra_css %}
 
 {% block main %}
@@ -66,10 +66,10 @@
         <p class="description"><strong>Supported by</strong></p>
     <div class="sponsored">
         <div class="col">
-            <a href="https://gepris.dfg.de/gepris/projekt/324867496?context=projekt&task=showDetail&id=324867496&" target="_blank"><img src="{{ static_hub }}images/DFG_CLAIM_163X60px.gif?v={{ static_version }}" class="img-responsive center-block" ></a>
+            <a href="https://gepris.dfg.de/gepris/projekt/324867496?context=projekt&task=showDetail&id=324867496&" target="_blank"><img src="{{ static_nginx }}images/DFG_CLAIM_163X60px.gif?v={{ static_version }}" class="img-responsive center-block" ></a>
         </div>
         <div class="col">
-            <img src="{{ static_hub }}images/gesis-logo.png?v={{ static_version }}" class="img-responsive center-block gesis-logo">
+            <img src="{{ static_nginx }}images/gesis-logo.png?v={{ static_version }}" class="img-responsive center-block gesis-logo">
         </div>
     </div>
 </div>
