--- a/gesishub/gesishub/files/etc/jupyterhub/templates/orc_home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/orc_home.html
@@ -12,12 +12,12 @@
 {% endblock meta_social %}
 
 {% block stylesheet %}
-<link href="{{ static_hub }}vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<link href="{{ static_nginx }}vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 {#<link rel="stylesheet" href="{{ static_url("css/style.min.css") }}" type="text/css"/>#}
 {% endblock %}
 
 {% block extra_css %}
-<link href="{{ static_hub }}orc_site.css?v={{ static_version }}" rel="stylesheet" />
+<link href="{{ static_nginx }}orc_site.css?v={{ static_version }}" rel="stylesheet" />
 {% endblock extra_css %}
 
 {% block scripts %}
@@ -34,7 +34,7 @@
   {#    <div class="col-lg-1 col-md-1"></div>#}
   {#    <div class="col-lg-10 col-lg-offset-1 text-center">#}
   <div class="col-lg-6 col-md-6 col-sm-5 hidden-xs">
-      <img alt="GESIS Notebooks" src="{{ static_hub }}images/notebook.png?v={{ static_version }}"
+      <img alt="GESIS Notebooks" src="{{ static_nginx }}images/notebook.png?v={{ static_version }}"
            class="img-responsive center-block" id="gesis-notebooks-img">
   </div>
   <div class="col-lg-6 col-md-6 col-sm-7 col-xs-12">
@@ -54,7 +54,7 @@
 {% endblock projects_form %}
 
 {% block script %}
-<script src="{{ static_hub }}vendor/typed.js-2.0.6/lib/typed.min.js"></script>
+<script src="{{ static_nginx }}vendor/typed.js-2.0.6/lib/typed.min.js"></script>
 
 <script>
     var typed = new Typed('#typed',
