--- a/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
@@ -36,11 +36,11 @@
     {% endblock meta_social %}
 
     {% block stylesheet %}
-    <link href="{{ static_hub }}vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="{{ static_nginx }}vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{{ static_url("css/style.min.css") }}" type="text/css"/>
     {% endblock %}
-    <link href="{{ static_hub }}notebooks.css?v={{ static_version }}" rel="stylesheet" />
-    <link id="favicon" rel="shortcut icon" type="image/png" href="{{ static_hub }}images/logo/logo.png?v={{ static_version }}" />
+    <link href="{{ static_nginx }}notebooks.css?v={{ static_version }}" rel="stylesheet" />
+    <link id="favicon" rel="shortcut icon" type="image/png" href="{{ static_nginx }}images/logo/logo.png?v={{ static_version }}" />
 
     {% block extra_css %}
     {% endblock extra_css %}
@@ -48,8 +48,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="{{ static_hub }}vendor/html5shiv.min.js"></script>
-      <script src="{{ static_hub }}vendor/respond.min.js"></script>
+      <script src="{{ static_nginx }}vendor/html5shiv.min.js"></script>
+      <script src="{{ static_nginx }}vendor/respond.min.js"></script>
     <![endif]-->
 
     {% block scripts %}
@@ -147,7 +147,7 @@
 {% endblock footer %}
 {% endblock body %}
 
-<script src="{{ static_hub }}gesis_nav.js?v={{ static_version }}"></script>
+<script src="{{ static_nginx }}gesis_nav.js?v={{ static_version }}"></script>
 
 {% block script %}
 {% endblock %}
