add maintenance page back

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/error.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/error.html
@@ -1,9 +1,7 @@
 {% extends "templates/error.html" %}
 
 {% block main %}
-<div class="container">
-{#    <div class="row">#}
+<div id="main-container" class="container">
     {{ super() }}
-{#    </div>#}
 </div>
 {% endblock %}
