update gesisbinder templates

--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/footer.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container footer-container">
       <span class="footer-span">
-          <img src="/static/images/leibniz_logo_en_white.svg?v=1" width="78" height="54" alt="Leibniz Logo"/>
+          <img src="{{ static_nginx }}images/leibniz_logo_en_white.svg?v={{ static_version }}" width="78" height="54" alt="Leibniz Logo"/>
       </span>
         <span class="footer-span" style="padding-right: 0;">
           <a class="footer-link" href="{{ imprint_url }}">Imprint</a> |
