--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
@@ -4,20 +4,20 @@
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
-                        <img src="/static/images/gs_home_logo_en.svg?v=1" class="hidden-sm hidden-xs" width="200" height="37">
-                        <img src="/static/images/gs_small_logo_de.svg?v=1" class="visible-sm visible-xs">
+                        <img src="{{ static_nginx }}images/gs_home_logo_en.svg?v={{ static_version }}" class="hidden-sm hidden-xs" width="200" height="37">
+                        <img src="{{ static_nginx }}images/gs_small_logo_de.svg?v={{ static_version }}" class="visible-sm visible-xs">
                     </a>
                     <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
                             {% if active == 'home' %}
                             <li>
-                                <a href="{{ gesishub_url }}" style="display: inline; padding: 0;">
+                                <a href="{{ login_url }}" style="display: inline; padding: 0;">
                                     <button class="navbar-toggle navbar-link">
                                         <b aria-hidden="true" class="visible-xs glyphicon glyphicon glyphicon-log-in"></b>
                                     </button>
                                 </a>
                             </li>
-                            {% elif active == 'hub' %}
+                            {% elif active == 'hub' and user %}
                             <li>
                                 <a href="{{ logout_url }}" style="display: inline; padding: 0;">
                                     <button class="navbar-toggle navbar-link">
@@ -40,14 +40,14 @@
                     <ul class="nav navbar-nav pull-left">
                         {% if active == 'home' %}
                         <li>
-                            <a href="{{ gesishub_url }}">
+                            <a href="{{ login_url }}">
                                 <span class="top-menu-item hidden-xs">
                               <span aria-hidden="true" class="glyphicon glyphicon glyphicon-log-in"></span>
                               Login
                           </span>
                             </a>
                         </li>
-                        {% elif active == 'hub' %}
+                        {% elif active == 'hub' and user %}
                         <li>
                             <a href="{{ logout_url }}">
                                 <span class="top-menu-item hidden-xs">
@@ -71,7 +71,7 @@
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
                 <div id="header_banner">
                     <a href="{{ home_url }}">
-                        <img src="/static/images/logo/logo_text_2.png?v=1"
+                        <img src="{{ static_nginx }}images/logo/logo_text_2.png?v={{ static_version }}"
                              class="img-responsive" alt="To GESIS Notebooks Homepage" title="To GESIS Notebooks Homepage">
                     </a>
                 </div>
