--- a/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
@@ -4,7 +4,7 @@
 <!-- Social media previews -->
 <meta property="og:title" content="GESIS Notebooks">
 <meta property="og:description" content="Open Research Computing for the Social Sciences.">
-<meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo_big_square.png">
+<meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo_big_square.png?v={{ static_version }}">
 <meta property="og:image:width" content="800">
 <meta property="og:image:height" content="800">
 <meta property="og:image:alt" content="GESIS Notebooks Logo"/>
