update meta title and desc of templates

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
@@ -1,5 +1,8 @@
 {% extends "page.html" %}
 
+{% block title %}FAQ{% endblock %}
+{% block meta_description %}{% endblock %}
+
 {% block meta_social %}
 <meta property="og:title" content="GESIS Notebooks">
 <meta property="og:description" content="Open Research Computing for the Social Sciences.">
