--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/page.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/page.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="GESIS Notebooks ({{version}})">
-  {#<meta name="author" content="">#}
-  <title>{% block title %}GESIS Notebooks ({{version}}){% endblock %}</title>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {# The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags #}
+  <title>{% block title %}GESIS Binder{% endblock %}</title>
+  <meta name="description" content="Reproducible, sharable, open, interactive computing environments.">
   {% block head %}
   <link href="{{static_url("dist/styles.css")}}" rel="stylesheet"/>
   <link href="{{ static_nginx }}vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
