--- a/gesishub/gesishub/files/etc/binderhub/templates/page.html
+++ b/gesishub/gesishub/files/etc/binderhub/templates/page.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="GESIS Notebooks ({{version}})">
-  {#<meta name="author" content="">#}
-  <title>{% block title %}GESIS Notebooks ({{version}}){% endblock %}</title>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {# The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags #}
+  <title>{% block title %}GESIS Notebooks ({{ version }}){% endblock %}</title>
+  <meta name="description" content="GESIS Notebooks ({{ version }})">
   {% block head %}
   <link href="{{static_url("dist/styles.css")}}" rel="stylesheet"/>
   <link href="{{ static_nginx }}vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -15,19 +14,6 @@
   <script src="{{ static_nginx }}vendor/jquery-3.2.1.min.js"></script>
   <link href="{{ static_nginx }}notebooks.css?v={{ static_version }}" rel="stylesheet" />
   <link id="favicon" rel="shortcut icon" type="image/png" href="{{ static_nginx }}images/logo/logo.png?v={{ static_version }}" />
-
-  <!-- Social media previews -->
-  {% block meta_social %}
-  {% block meta_social_title %}
-  <meta property="og:title" content="GESIS Binder">
-  <meta property="og:description" content="Reproducible, sharable, open, interactive computing environments.">
-  {% endblock meta_social_title %}
-  <meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo_big_square.png?v={{ static_version }}">
-  <meta property="og:image:width" content="800">
-  <meta property="og:image:height" content="800">
-  <meta property="og:image:alt" content="GESIS Notebooks Logo" />
-  <meta name="twitter:card" content="summary">
-  {% endblock meta_social %}
 
   {% block extra_css %}
   {% endblock extra_css %}
