--- a/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
@@ -1,5 +1,8 @@
 {% extends "page.html" %}
 
+{% block title %}About{% endblock %}
+{% block meta_description %}{% endblock %}
+
 {% block meta_social %}
 <!-- Social media previews -->
 <meta property="og:title" content="GESIS Notebooks">
