--- a/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
@@ -26,11 +26,13 @@
 
 <head>
     <meta charset="utf-8">
-
-    <title>{% block title %}GESIS Notebooks ({{ version }}){% endblock %}</title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="JupyterHub - GESIS Notebooks ({{version}})">
+    {# The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags #}
+    <title>{% block title %}GESIS Notebooks ({{ version }}){% endblock %}</title>
+    {% block meta_description %}
+    <meta name="description" content="GESIS Notebooks is an online service for researchers in the Social Sciences to publish and execute data-driven research designs.">
+    {% endblock %}
 
     {% block meta_social %}
     {% endblock meta_social %}
