link featured projects (in home page) to (public) GESIS binder if user not logged in

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -339,7 +339,7 @@
                             {% endif %}
                         </div>
                         <div style="display: inline-block; float: right;">
-                            <a href="{{ example.binder_link }}" style="align:right;">
+                            <a href="{{ binder_base_url }}{{ example.binder_link }}" style="align:right;">
                                 <img src="{{ static_nginx }}images/badge_logo.svg?v={{ static_version }}" alt="Launch Binder">
                             </a>
                         </div>
